--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>23</source>
+                    <target>23</target>
+                    <release>23</release>
                 </configuration>
             </plugin>
             <plugin>
